# pac_man

./: .gitignore  Bidu.ipynb  README.md  agent_program.py  bidu.py  flavio.ipynb  gabriel.ipynb  galante.ipynb  maze.py  maze_test.py  node.py  pacman.ipynb  pacman_problem.py  pyproject.toml  relatorio.ipynb  requirements.txt  search.py  test_matheus.ipynb
.ipynb_checkpoints/: gabriel-checkpoint.ipynb  pacman-checkpoint.ipynb
maze_generator/: generator.py  maze.py  plot.py
pac_man/: maze.py  node.py  pacman_problem.py  pacman_problem_2.py  pacman_problem_3.py  pacman_problem_astar.py  search.py  utils.py
pac_man/maze_generator/: generator.py  maze.py  plot.py  state.py
tests/: pacman_problem_test.py
