[tool.poetry]
name = "pac_man"
version = "0.1.0"
description = ""
authors = ["Felipe Rodrigues <felipe@felipevr.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]
pytest = {version = "^5.4", allows-prereleases = true}
pylint = {version = "^2.5", allows-prereleases = true}
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
